--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
   <nav class="navbar navbar-default main-navbar custom-header">
     <div class="container-fluid container-green">
       <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="line-top-left"></div>
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="icon-bar"></span>
@@ -47,7 +46,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="index.html">
-          <span class="title-sacateundiez">SACATE</span><span class="title-sacateundiez">UN</span><span class="title-sacateundiez">DIEZ</span> <!-- Los spans estan para la separacion de las palabras, si no hace falta sacarlo -->
+          <span class="title-sacateundiez">SACATE UN DIEZ</span>
           <p>11-6852-3521 - sacateundiez52@gmail.com</p>
         </a>
       </div>
